[gd_scene load_steps=8 format=3 uid="uid://bnomjuwqyfku0"]

[ext_resource type="Theme" uid="uid://bpmxyt1ruoaxv" path="res://style/theme_main.tres" id="1_5rp3d"]
[ext_resource type="Script" path="res://ui/loss.gd" id="2_3cvfo"]
[ext_resource type="Texture2D" uid="uid://dgcrtayi2ca07" path="res://ui/dither.png" id="2_wu410"]
[ext_resource type="Script" path="res://ui/buttons_list.gd" id="3_3bjo4"]
[ext_resource type="PackedScene" uid="uid://d2dtje45qxkuh" path="res://ui/main_menu_button.tscn" id="4_bu4h4"]

[sub_resource type="LabelSettings" id="LabelSettings_51l3k"]
font_color = Color(0.737255, 0.290196, 0.607843, 1)
outline_size = 8
outline_color = Color(0.25098, 0.2, 0.32549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2vi1y"]
font_size = 64
font_color = Color(1, 0.835294, 0.254902, 1)
outline_size = 16
outline_color = Color(0.25098, 0.2, 0.32549, 1)

[node name="loss" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 512.0
offset_bottom = 512.0
theme = ExtResource("1_5rp3d")
script = ExtResource("2_3cvfo")

[node name="dither" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wu410")
stretch_mode = 1

[node name="list" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="as_ever" type="Label" parent="list"]
layout_mode = 2
theme_override_colors/font_color = Color(0.737255, 0.290196, 0.607843, 1)
text = "as ever..."
label_settings = SubResource("LabelSettings_51l3k")
horizontal_alignment = 1

[node name="loss" type="Label" parent="list"]
layout_mode = 2
text = "LOSS"
label_settings = SubResource("LabelSettings_2vi1y")
horizontal_alignment = 1

[node name="time" type="Label" parent="list"]
layout_mode = 2
theme_override_colors/font_color = Color(0.737255, 0.290196, 0.607843, 1)
text = "Survival for %s seconds"
label_settings = SubResource("LabelSettings_51l3k")
horizontal_alignment = 1

[node name="buttons" type="HBoxContainer" parent="list"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
script = ExtResource("3_3bjo4")
button_angle = -20.0

[node name="retry" parent="list/buttons" instance=ExtResource("4_bu4h4")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = "Once again"

[node name="egress" parent="list/buttons" instance=ExtResource("4_bu4h4")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../retry")
focus_neighbor_top = NodePath("../retry")
focus_neighbor_right = NodePath("../retry")
focus_neighbor_bottom = NodePath("../retry")
focus_next = NodePath("../retry")
focus_previous = NodePath("../retry")
text = "No more"

[node name="timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[connection signal="pressed" from="list/buttons/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="list/buttons/egress" to="." method="_on_egress_pressed"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
